--- a/MukkiPlayer/Info.plist
+++ b/MukkiPlayer/Info.plist
@@ -2,9 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>MukkiPlayer needs access to Apple Music to play your favorite albums and playlists.</string>
 	<key>UIBackgroundModes</key>
 	<array>
-		<string>remote-notification</string>
+		<string>audio</string>
 	</array>
 </dict>
 </plist>
